commit para progredir em outro note